# deep-fractional.quest

./: .env.example  .gitignore  CLAUDE.md  RESTART_PROMPT.md
agent/: agent.py  main.py  pyproject.toml  requirements.txt  state.py
agent/agents/: __init__.py
agent/middleware/: __init__.py  summarization.py  tool_limit.py
agent/migrations/: 002_create_jobs_tables.sql  003_create_coaching_tables.sql
agent/persistence/: __init__.py  checkpointer.py  neon.py  schema.sql
agent/tools/: __init__.py  coaching.py  jobs.py  memory.py  onboarding.py  tavily_search.py
docs/: ARCHITECTURE.md  ARTICLE_BREAKDOWN.md  CHECKLIST.md  PRD.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/auth/[...path]/: route.ts
frontend/src/app/api/chat/completions/: route.ts
frontend/src/app/api/copilotkit/: route.ts
frontend/src/app/api/hume-token/: route.ts
frontend/src/app/api/profile/: route.ts
frontend/src/app/api/zep-context/: route.ts
frontend/src/app/api/zep-store/: route.ts
frontend/src/app/auth/[path]/: page.tsx
frontend/src/components/: CopilotWrapper.tsx  HITLCard.tsx  ProfileSidebar.tsx  VoiceInput.tsx  providers.tsx
